tests/golden/errors/import_placement.kso
print "hi"

import "std/json"
